style: prevent page height growth

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -229,6 +229,7 @@ button:focus-visible {
   display: flex;
   flex: 1 1 auto;
   width: 100%;
+  height: calc(100vh - 50px);
 }
 #sidebar {
   width: 200px;
