--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -221,6 +221,8 @@ button:focus-visible {
 }
 #page-title {
   margin: 0;
+  font-size: 1.5rem;
+  line-height: 1.2;
 }
 #version-info-banner {
   margin-right: 1rem;
