--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -226,6 +226,13 @@ button:focus-visible {
 }
 #version-info-banner {
   margin-right: 1rem;
+  padding: 2px 10px; /* Уменьшили вертикальный padding */
+  background-color: #f8f9fa;
+  border-bottom: 1px solid #dee2e6;
+  font-size: 8px;
+  color: #6c757d;
+  text-align: center;
+  font-family: sans-serif;
 }
 #app-layout {
   display: flex;
